--- a/src/Components/LecturerPage/Polls/polls.css
+++ b/src/Components/LecturerPage/Polls/polls.css
@@ -1,6 +1,6 @@
 .lecturer_polls {
   width: 75%;
-  height: calc(100vh - 51px);
+  height: calc(100vh - 57px);
   min-height: 500px;
   margin: 0 auto;
   padding: 10px 30px;
